# srtm_reader

./: .gitignore  Cargo.toml  LICENSE  README.md  coords.csv  test.fish
.github/workflows/: rust.yml
examples/: cli.rs  gpx.rs  main.rs.bak
src/: coords.rs  lib.rs  resolutions.rs  tests.rs  tiles.rs
