[package]
name = "srtm_reader"
version = "0.5.0"
edition = "2021"
authors = [
  "Jochen Görtler <web@goertler.email>",
  "Jeromos Kovács <iitsnotme214@proton.me>",
]

description = "A performant DTM(srtm) reader for .hgt files."
repository = "https://github.com/JeromeSchmied/srtm_reader.git"

keywords = ["srtm", "hgt", "elevation", "dtm", "dem"]
categories = ["science::geo", "parsing", "parser-implementation"]
license = "BSD-3-Clause"

exclude = ["*.hgt"]

[dev-dependencies]
gpx = "0.10.0"
rayon = "1.10.0"
